fix: thin scrollbar on code blocks

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -62,6 +62,10 @@ body {
 	scroll-margin-top: 100px;
 }
 
+#article pre {
+	scrollbar-width: thin;
+}
+
 #article code[data-line-numbers] {
 	counter-reset: line;
 }
